--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,12 @@
 .search-bar {
   border-radius: 0 20px 0 20px;
 }
+.swiper-pagination-bullet {
+  width: 30px !important;
+  height: 2px !important;
+  background: linear-gradient(to right, #0098ff, #7b35c8) !important;
+  border-radius: 0 !important;
+}
 
 @font-face {
   font-family: Outfit;
