create best product section s of home page

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,10 @@
 @tailwind utilities;
 
 @layer base {
+  html {
+    @apply overflow-x-hidden w-screen;
+  }
   body {
-    @apply scrollbar-none;
+    @apply scrollbar-none w-full overflow-x-hidden;
   }
 }
